--- a/IODynamicObject.Infrastructure/IODynamicObject.Infrastructure.csproj
+++ b/IODynamicObject.Infrastructure/IODynamicObject.Infrastructure.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\IODynamicObject.Application\IODynamicObject.Application.csproj" />
+    <ProjectReference Include="..\IODynamicObject.Domain\IODynamicObject.Domain.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
