--- a/IODynamicObject.API/IODynamicObject.API.csproj
+++ b/IODynamicObject.API/IODynamicObject.API.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IODynamicObject.Application\IODynamicObject.Application.csproj" />
+    <ProjectReference Include="..\IODynamicObject.Infrastructure\IODynamicObject.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
