Proof of concept

--- a/IODynamicObject.API/appsettings.json
+++ b/IODynamicObject.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=IODynamicObjectDB;User=root;Password=matehujin12;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
