--- a/IODynamicObject.Infrastructure/IODynamicObject.Infrastructure.csproj
+++ b/IODynamicObject.Infrastructure/IODynamicObject.Infrastructure.csproj
@@ -1,6 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.8" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IODynamicObject.Application\IODynamicObject.Application.csproj" />
     <ProjectReference Include="..\IODynamicObject.Domain\IODynamicObject.Domain.csproj" />
   </ItemGroup>
