--- a/IODynamicObject.Application/IODynamicObject.Application.csproj
+++ b/IODynamicObject.Application/IODynamicObject.Application.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IODynamicObject.Domain\IODynamicObject.Domain.csproj" />
   </ItemGroup>
 
