--- a/IODynamicObject.Application/IODynamicObject.Application.csproj
+++ b/IODynamicObject.Application/IODynamicObject.Application.csproj
@@ -8,6 +8,11 @@
     <ProjectReference Include="..\IODynamicObject.Domain\IODynamicObject.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enumeration\" />
+    <Folder Include="Filters\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
