Postman collection & remote db connection

--- a/IODynamicObject.API/appsettings.json
+++ b/IODynamicObject.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=IODynamicObjectDB;User=root;Password=matehujin12;"
+    "DefaultConnection": "Server=db8472.public.databaseasp.net; Database=db8472; Uid=db8472; Pwd=mD@25pJ?wE_6; SslMode=Preferred;"
   },
   "Logging": {
     "LogLevel": {
